--- a/app/src/main/res/layout/fragment_summary.xml
+++ b/app/src/main/res/layout/fragment_summary.xml
@@ -19,6 +19,16 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:context=".SummaryFragment">
 
+    <data>
+        <variable
+            name="viewModel"
+            type="com.example.cupcake.model.OrderViewModel" />
+
+        <variable
+            name="summaryFragment"
+            type="com.example.cupcake.SummaryFragment" />
+    </data>
+
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent">
@@ -50,6 +60,7 @@
                     android:id="@+id/quantity"
                     style="@style/Widget.Cupcake.TextView.OrderSummary"
                     android:layout_width="wrap_content"
+                    android:text="@{viewModel.quantity.toString()}"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="@dimen/order_summary_margin"
                     tools:text="6 cupcakes" />
@@ -74,6 +85,7 @@
                     style="@style/Widget.Cupcake.TextView.OrderSummary"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:text="@{viewModel.flavor}"
                     android:layout_marginTop="@dimen/order_summary_margin"
                     tools:text="Chocolate" />
 
@@ -97,6 +109,7 @@
                     style="@style/Widget.Cupcake.TextView.OrderSummary"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:text="@{viewModel.date}"
                     android:layout_marginTop="@dimen/order_summary_margin"
                     tools:text="Sunday" />
 
@@ -113,6 +126,7 @@
                     style="@style/Widget.Cupcake.TextView.FinalPrice"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:text="@{@string/subtotal_price(viewModel.price)}"
                     android:layout_gravity="end"
                     android:layout_marginTop="@dimen/side_margin"
                     tools:text="Total $5.00" />
@@ -123,6 +137,7 @@
                 android:id="@+id/send_button"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:onClick="@{() -> summaryFragment.sendOrder()}"
                 android:layout_marginTop="@dimen/side_margin"
                 android:text="@string/send" />
 
